# sordino

./: .gitignore  CLA.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  sordino.toml  sordino.toml.example  zlauder.toml  zlauder.toml.example
.cargo/: config.toml.example
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
assets/: privacy.md
codex-sordino-plugin/: README.md
codex-sordino-plugin/.codex-plugin/: plugin.json
codex-sordino-plugin/hooks/: hooks.json
codex-sordino-plugin/scripts/: _resolve-bins.test.sh  codex-session-start.sh
codex-zlauder-plugin/: README.md
codex-zlauder-plugin/.codex-plugin/: plugin.json
codex-zlauder-plugin/hooks/: hooks.json
codex-zlauder-plugin/scripts/: _resolve-bins.sh  _resolve-bins.test.sh  codex-session-start.sh  codex-user-prompt-submit.sh  session-start.sh
codex-zlauder-plugin/skills/zlauder-openai/: SKILL.md
codex-zlauder-plugin/skills/zlauder-openai/scripts/: disable.sh  enable.sh  status.sh  verify.sh
commands/: disable.md  enable.md  monitor.md  secrets.md  verify.md
crates/sordino-engine/: Cargo.toml
crates/sordino-engine/examples/: bare_pii_fp_bench.rs  ml_gate.rs  probe.rs  profile_bench.rs
crates/sordino-engine/src/: broker.rs  cache.rs  config.rs  detect.rs  error.rs  lib.rs  manifest.rs  ml.rs  ml_api.rs  recognizers.rs  secrets.rs  store.rs  token.rs
crates/sordino-engine/tests/: code_sensitivity.rs  prewarm_parity.rs
crates/sordino-hooks/: Cargo.toml
crates/sordino-hooks/src/: main.rs  transcript.rs
crates/sordino-hooks/tests/: f3_verb_layer_guards.rs  import_cli.rs
crates/sordino-proxy/: Cargo.toml
crates/sordino-proxy/src/: admin.rs  bind.rs  config.rs  headers.rs  lib.rs  main.rs  ml.rs  openai_chat.rs  openai_responses.rs  routes.rs  secrets.rs  sse.rs  state.rs  test_support.rs  tripwire.rs  walk.rs  zdr.rs
crates/sordino-proxy/src/monitor/: capture.rs  delta.rs  http.rs  ledger.rs  mod.rs  model.rs  persist.rs  spans.rs  store.rs  ui.rs
crates/sordino-proxy/src/monitor/ui/: monitor.css  monitor.html  monitor.js
crates/sordino-proxy/tests/: integration.rs  ledger_events.rs
crates/sordino-secrets/: Cargo.toml
crates/sordino-secrets/src/: broker_spawn.rs  classify.rs  cli.rs  lib.rs  provider.rs
crates/sordino-secrets/src/providers/: age.rs  dotenv.rs  env.rs  pass.rs
crates/sordino-state/: Cargo.toml  build.rs
crates/sordino-state/src/: lib.rs
crates/zlauder-engine/: Cargo.toml
crates/zlauder-engine/examples/: bare_pii_fp_bench.rs  ml_gate.rs  profile_bench.rs
crates/zlauder-engine/src/: broker.rs  cache.rs  config.rs  detect.rs  error.rs  lib.rs  manifest.rs  ml.rs  ml_api.rs  ml_http.rs  recognizers.rs  secrets.rs  store.rs  surface.rs  token.rs
crates/zlauder-hooks/: Cargo.toml
crates/zlauder-hooks/src/: main.rs
crates/zlauder-proxy/: Cargo.toml
crates/zlauder-proxy/src/: admin.rs  config.rs  headers.rs  lib.rs  main.rs  ml.rs  monitor.rs  openai_chat.rs  openai_responses.rs  routes.rs  secrets.rs  sse.rs  state.rs  test_support.rs  walk.rs  wire_adapter.rs  zdr.rs
crates/zlauder-proxy/src/monitor/: delta.rs  http.rs  mod.rs  model.rs  persist.rs  spans.rs  store.rs  surfaces.rs
crates/zlauder-proxy/src/monitor/ui/: monitor.css  monitor.html  monitor.js
crates/zlauder-proxy/tests/: integration.rs
crates/zlauder-secrets/: Cargo.toml
crates/zlauder-secrets/src/: broker_spawn.rs  classify.rs  cli.rs  error.rs  lib.rs  provider.rs  types.rs
crates/zlauder-secrets/src/providers/: age.rs  dotenv.rs  env.rs  mod.rs  sops.rs
crates/zlauder-state/: Cargo.toml  build.rs
crates/zlauder-state/src/: lib.rs
docs/: ENTERPRISE-DEPLOYMENT.md  RELEASING.md  THREAT-MODEL.md
e2e/: E2E-PLAN.md  README.md  fake_anthropic.py  remote-control-first-contact.sh  run-e2e.sh  sordino.toml  zlauder.toml
e2e/.claude/: settings.json
e2e/.claude/commands/: privacy.md
e2e/codex/: codex-e2e-lib.sh  fake_openai.py  run-codex-assertions.sh
examples/: settings.json
examples/commands/: privacy.md
hooks/: hooks.json
scripts/: _resolve-bins.sh  check-deps-fresh.sh  codex-user-prompt-submit.sh  enable.sh  mask.sh  no-bare-array-expansion.test.sh  pre-tool-use.sh  privacy.sh  uninstall.sh  user-prompt-submit.sh  verify.sh  zdr.sh
skills/sordino-openai/: SKILL.md
skills/sordino-openai/scripts/: disable.sh  enable.sh  status.sh  verify.sh
sordino-plugin/: README.md  sordino.toml.example
sordino-plugin/.claude-plugin/: plugin.json
sordino-plugin/commands/: disable.md  doctor.md  enable.md  mask.md  privacy.md  status.md  uninstall.md  zdr.md
sordino-plugin/scripts/: disable.sh  doctor.sh  mask.sh  monitor.sh  pre-tool-use.sh  privacy.sh  secrets.sh  session-start.sh  zdr.sh
zlauder-plugin/: README.md  zlauder.toml  zlauder.toml.example
zlauder-plugin/.claude-plugin/: plugin.json
zlauder-plugin/commands/: disable.md  enable.md  monitor.md  privacy.md  reveal.md  secrets.md  status.md  uninstall.md  zdr.md
zlauder-plugin/hooks/: hooks.json
zlauder-plugin/scripts/: _resolve-bins.sh  disable.sh  enable.sh  monitor.sh  pre-tool-use.sh  privacy.sh  reveal.sh  secrets.sh  session-start.sh  status.sh  uninstall.sh  zdr.sh
