[workspace]
resolver = "2"
members = [
    "crates/zlauder-engine",
    "crates/zlauder-proxy",
    "crates/zlauder-hooks",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
authors = ["failspy <failspy@exonull.com>"]

[workspace.dependencies]
# local path deps: presidio-rs (detection)
presidio-core     = { path = "../jcc/presidio-rs/presidio-core",     version = "0.1.0" }
presidio-analyzer = { path = "../jcc/presidio-rs/presidio-analyzer", version = "0.1.0" }

# local path deps: llm-wires (Anthropic wire types + SSE)
anthropic-wire = { path = "../jcc/llm-wires/anthropic-wire", version = "0.1.0" }
sse-core       = { path = "../jcc/llm-wires/sse-core",       version = "0.1.0" }

# masking engine
blake3   = "1.5"
aes-gcm  = "0.10"
rand     = "0.8"
regex    = "1.11"
smallvec = { version = "1.13", features = ["serde"] }
uuid     = { version = "1.11", features = ["v4", "serde"] }

# serde / common
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "2.0"
toml        = "0.8"
anyhow      = "1.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap        = { version = "4", features = ["derive", "env"] }

# async / http (proxy)
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "io-util"] }
axum    = "0.8"
tower-http = { version = "0.6", features = ["trace", "limit"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http    = "1.1"
bytes   = "1.9"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
