[workspace]
resolver = "2"
members = [
    "crates/zlauder-state",
    "crates/zlauder-engine",
    "crates/zlauder-proxy",
    "crates/zlauder-hooks",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
authors = ["failspy <failspy@exonull.com>"]

[workspace.dependencies]
# External crates, each published as its own GitHub repo (crates.io planned).
# Git deps so the workspace builds from a clean checkout (CI, contributors);
# Cargo.lock pins the exact commit for reproducible release builds. To swap to
# crates.io later, drop `git`/`branch` and keep `version`.
#
# For local co-development against ../jcc checkouts, add a gitignored
# .cargo/config.toml `paths` override (see .cargo/config.toml.example) — cargo
# then uses your local trees with no network and no manifest edits.
presidio-core     = { git = "https://github.com/FailSpy/presidio-rs.git", branch = "main", version = "0.1.0" }
presidio-analyzer = { git = "https://github.com/FailSpy/presidio-rs.git", branch = "main", version = "0.1.0" }

anthropic-wire = { git = "https://github.com/FailSpy/llm-wires.git", branch = "main", version = "0.1.0" }
sse-core       = { git = "https://github.com/FailSpy/llm-wires.git", branch = "main", version = "0.1.0" }

# masking engine
blake3   = "1.5"
aes-gcm  = "0.10"
rand     = "0.8"
regex    = "1.11"
smallvec = { version = "1.13", features = ["serde"] }
uuid     = { version = "1.11", features = ["v4", "serde"] }

# serde / common
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "2.0"
toml        = "0.8"
anyhow      = "1.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap        = { version = "4", features = ["derive", "env"] }

# async / http (proxy)
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "io-util"] }
axum    = "0.8"
tower-http = { version = "0.6", features = ["trace", "limit"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http    = "1.1"
bytes   = "1.9"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
