[package]
name = "sordino-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Claude Code control-plane hook handler for sordino: SessionStart proxy launch, status line, reveal/audit."

[[bin]]
name = "sordino-hooks"
path = "src/main.rs"

[dependencies]
sordino-state  = { path = "../sordino-state" }
# Hooks only touches the engine's ungated config/category types (EngineConfig,
# Profile, Category, MlStatus) — no ML backend, no Candle. Opt out of the engine's
# default features so this binary stays lean (a regex-only engine build).
sordino-engine = { path = "../sordino-engine", default-features = false }
# The registration classifier (name/entropy eligibility) — shared by `secrets scan`
# and `secrets import`. Regex-only, no engine internals, no dep cycle.
sordino-secrets = { path = "../sordino-secrets" }
# Native `.env` parsing for the intake funnel (scan/import) — no process spawn.
dotenvy    = "0.15"

clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
rand       = { workspace = true }
blake3     = { workspace = true }
toml_edit  = "0.22"
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "json"] }

# Unix-only: process-group signalling for the status-line wrap timeout (kill_group).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Async runtime for the offline dotenv-resolve + mask-proof acceptance tests.
tokio = { workspace = true, features = ["macros", "rt"] }
# The real proxy install path (`resolve_and_install`) for the end-to-end MASK proof.
# Candle-free (`ml-http`) so the test build stays lean.
sordino-proxy = { path = "../sordino-proxy", default-features = false, features = ["ml-http"] }
# Real pty for the interactive per-value opt-in wiring test.
portable-pty = "0.9"
