[package]
name = "sordino-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared on-disk session state for sordino (proxy <-> hooks): the per-project proxy's port, admin key, salt, and pid."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
blake3     = { workspace = true }

# Unix process-liveness check via kill(pid, 0) — portable across Linux AND macOS,
# unlike a /proc probe. Without it a dead proxy's record was never reclaimable on macOS.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
