[package]
name = "zlauder-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "PII masking/unmasking engine: deterministic blake3 session tokens + AES-256-GCM reversible store, wrapping presidio-rs for detection."

[dependencies]
presidio-core     = { workspace = true }
presidio-analyzer = { workspace = true }

blake3   = { workspace = true }
aes-gcm  = { workspace = true }
rand     = { workspace = true }
regex    = { workspace = true }
smallvec = { workspace = true }
uuid     = { workspace = true }

serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
