[package]
name = "zlauder-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "PII masking/unmasking engine: deterministic blake3 session tokens + AES-256-GCM reversible store, wrapping presidio-rs for detection."

[dependencies]
presidio-core     = { workspace = true }
presidio-analyzer = { workspace = true }
# ML recognizer (openai/privacy-filter, Candle CPU backend). Optional, but ON by
# default (the `ml` feature is in `default`) so normal builds are "ML-capable".
# `zlauder-hooks` opts OUT with `default-features = false` to stay lean.
presidio-classifier = { workspace = true, features = ["backend-candle"], optional = true }
# HTTP ML recognizer (remote HF-token-classification endpoint). Optional, ON by
# default (the `ml-http` feature is in `default`). Sync client on purpose — see
# the workspace manifest note.
ureq = { workspace = true, optional = true }

blake3   = { workspace = true }
aes-gcm  = { workspace = true }
rand     = { workspace = true }
regex    = { workspace = true }
smallvec = { workspace = true }
uuid     = { workspace = true }
lru      = { workspace = true }
aho-corasick = { workspace = true }
zeroize  = { workspace = true }
globset  = { workspace = true }
url      = { workspace = true }
shlex    = { workspace = true }

serde     = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[features]
# `ml` is ON by default so a normal `cargo build` is ML-capable ("always compiled
# in"). The candle-touching code lives behind `cfg(feature = "ml")` in `ml.rs`;
# the rest of the engine (the MlRuntime slot, detection wiring) is candle-free, so
# a `--no-default-features` build is a lean regex-only engine that still parses the
# `[engine.ml]` config (it just never loads a model).
default = ["ml", "ml-http"]
ml = ["dep:presidio-classifier"]
# Remote-inference backend (`[engine.ml] backend = "http"`): no Candle, no
# weights — just a small sync HTTP client. Independent of `ml`, so a slim
# regex+http build (`--no-default-features --features ml-http`) is possible.
ml-http = ["dep:ureq"]
# NOTE (R1, gemm-vs-MKL lever): an opt-in `mkl` passthrough feature was attempted
# here (`mkl = ["ml", "presidio-classifier/mkl"]`) but it CANNOT be wired without
# breaking the default build. presidio-classifier is consumed as a git dependency
# (pinned in Cargo.lock); the `.cargo/config.toml` `[paths]` override substitutes
# the local source for compilation but cargo still resolves the FEATURE GRAPH
# against the git-pinned manifest, which has no `mkl` feature. Declaring a
# passthrough to a non-existent upstream feature makes cargo fail resolution for
# EVERY build (even ones that don't enable `mkl`), exit 101:
#   "depends on `presidio-classifier` with feature `mkl` but ... does not have it"
# Enabling MKL therefore requires committing+pushing the `mkl` feature to the
# presidio-rs `main` branch and re-pinning Cargo.lock — a change to the default
# build's inputs for all consumers. R1 is STOPPED here per the lever's guard
# ("if wiring mkl cross-crate is infeasible without breaking the default build,
# report that and STOP"). gemm remains the documented x86 default; see AUDIT notes.

[dev-dependencies]
serde_json = { workspace = true }
toml       = { workspace = true }
