[package]
name = "zlauder-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Claude Code control-plane hook handler for zlauder: SessionStart proxy launch, status line, reveal/audit."

[[bin]]
name = "zlauder-hooks"
path = "src/main.rs"

[dependencies]
zlauder-state  = { path = "../zlauder-state",  version = "0.5.1" }
zlauder-engine = { path = "../zlauder-engine", version = "0.5.1" }

clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
rand       = { workspace = true }
blake3     = { workspace = true }
toml_edit  = "0.22"
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "json"] }
