[package]
name = "zlauder-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Claude Code control-plane hook handler for zlauder: SessionStart proxy launch, status line, reveal/audit."

[[bin]]
name = "zlauder-hooks"
path = "src/main.rs"

[dependencies]
zlauder-state  = { path = "../zlauder-state" }
# Hooks only touches the engine's ungated config/category types (EngineConfig,
# Profile, Category, MlStatus) — no ML backend, no Candle. Opt out of the engine's
# default features so this binary stays lean (a regex-only engine build).
zlauder-engine = { path = "../zlauder-engine", default-features = false }

clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
rand       = { workspace = true }
blake3     = { workspace = true }
toml_edit  = "0.22"
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "json"] }

# Unix-only: process-group signalling for the status-line wrap timeout (kill_group).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
