[package]
name = "zlauder-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Local reverse proxy: masks PII in Anthropic Messages API requests and unmasks streamed/non-streamed responses on the wire."

[[bin]]
name = "zlauder-proxy"
path = "src/main.rs"

[dependencies]
# `features = ["ml"]` is explicit (not just relying on engine's default) so the
# proxy always carries the openai/privacy-filter download + recognizer paths.
zlauder-engine = { path = "../zlauder-engine", version = "0.8.0", features = ["ml"] }
zlauder-state  = { path = "../zlauder-state",  version = "0.8.0" }
zlauder-secrets = { path = "../zlauder-secrets", version = "0.8.0" }

anthropic-wire = { workspace = true }
openai-wire    = { workspace = true }
sse-core       = { workspace = true }

axum       = { workspace = true }
tower-http = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
http       = { workspace = true }
bytes      = { workspace = true }
futures    = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
blake3     = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }
toml_edit  = "0.22"
clap       = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
