[package]
name = "zlauder-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Host-side secret providers (pass/age/sops/dotenv/env) + registration classifier. Resolves SecretRefs into engine SecretRules; the only process-spawn choke-point lives here."

[dependencies]
# Produces `zlauder_engine::SecretRule`s for `MaskEngine::set_secret_rules`. Never
# touches engine internals.
zlauder-engine = { path = "../zlauder-engine", version = "0.8.0", default-features = false }

async-trait = "0.1"
# `process` for the SecretBroker spawn choke-point; the rest inherit from the
# workspace tokio feature set.
tokio    = { workspace = true, features = ["process"] }
dotenvy  = "0.15"
regex    = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "process"] }
