[package]
name = "zlauder-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared on-disk session state for zlauder (proxy <-> hooks): the per-project proxy's port, admin key, salt, and pid."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
blake3     = { workspace = true }
